--- a/app/src/main/res/layout/activity_verify_email.xml
+++ b/app/src/main/res/layout/activity_verify_email.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:onClick="changeToLoginActivity"
-    tools:context=".VerifyActivity">
+    tools:context=".VerifyEmailActivity">
 
     <Button
         android:id="@+id/btnReturn"
