--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -56,14 +56,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:fillViewport="false">
+                android:fillViewport="false"
+                android:overScrollMode="never">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/storiesBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clipChildren="false"
-                    android:keepScreenOn="true">
+                    android:descendantFocusability="blocksDescendants"
+                    android:keepScreenOn="true"
+                    android:overScrollMode="never">
 
                 </androidx.recyclerview.widget.RecyclerView>
             </androidx.core.widget.NestedScrollView>
@@ -78,7 +81,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/chatsListView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never" />
             </androidx.core.widget.NestedScrollView>
 
         </LinearLayout>
