Forgot Password Email screen added + Minor fixes

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -115,7 +115,7 @@
                 android:background="@drawable/round_button"
                 android:backgroundTint="@color/purple_500"
                 android:fontFamily="@font/quicksand_bold"
-                android:onClick="sendForgotPasswordCode"
+                android:onClick="sendForgotPasswordEmail"
                 android:text="@string/send"
                 android:textAllCaps="false"
                 android:textSize="20sp"
