--- a/app/src/main/res/layout/activity_verify_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_verify_forgotten_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ForgetPasswordActivity">
+    tools:context=".VerifyForgottenPasswordActivity">
 
     <TextView
         android:id="@+id/txtResend"
@@ -14,6 +14,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/asap"
+        android:onClick="sendPasswordEmail"
         android:text="@string/verify_resend"
         android:textColor="@color/resend_color"
         android:textSize="16sp"
