--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".LandingActivity">
+    tools:context=".activity.LandingActivity">
 
     <TextView
         android:id="@+id/txtChats"
