--- a/app/src/main/res/layout/activity_verify_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_verify_forgotten_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".VerifyForgottenPasswordActivity">
+    tools:context=".activity.auth.VerifyForgottenPasswordActivity">
 
     <TextView
         android:id="@+id/txtResend"
