Minor chat_card_item fixes

--- a/app/src/main/res/layout/chat_card_item.xml
+++ b/app/src/main/res/layout/chat_card_item.xml
@@ -33,6 +33,7 @@
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:background="#00FFFFFF"
+                android:outlineProvider="none"
                 app:cardBackgroundColor="#00FFFFFF"
                 app:cardCornerRadius="100dp"
                 app:layout_constraintStart_toStartOf="parent"
