--- a/app/src/main/res/drawable/ic_down_arrow.xml
+++ b/app/src/main/res/drawable/ic_down_arrow.xml
@@ -12,6 +12,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="4"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="#FFFFFF"
       android:strokeLineCap="round"/>
 </vector>
