--- a/app/src/main/res/drawable/ic_group.xml
+++ b/app/src/main/res/drawable/ic_group.xml
@@ -1,18 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="335.436dp"
-    android:height="335.436dp"
-    android:viewportWidth="335.436"
-    android:viewportHeight="335.436">
-  <path
-      android:fillColor="#FFFFFF"
-      android:pathData="M255.436,110.304m-44.138,0a44.138,44.138 0,1 1,88.276 0a44.138,44.138 0,1 1,-88.276 0"/>
-  <path
-      android:fillColor="#FFFFFF"
-      android:pathData="M100.725,187.928C45.096,187.928 0,233.024 0,288.653h201.45C201.45,233.024 156.354,187.928 100.725,187.928z"/>
-  <path
-      android:fillColor="#FFFFFF"
-      android:pathData="M255.436,184.442c-20.787,0 -39.711,7.938 -53.931,20.938c14.212,17.138 23.672,37.368 27.712,59.062h106.219C335.436,220.259 299.618,184.442 255.436,184.442z"/>
-  <path
-      android:fillColor="#FFFFFF"
-      android:pathData="M100.725,102.355m-55.573,0a55.573,55.573 0,1 1,111.146 0a55.573,55.573 0,1 1,-111.146 0"/>
+<vector android:height="20dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FFFF" android:pathData="M152,184m-72,0a72,72 0,1 1,144 0a72,72 0,1 1,-144 0"/>
+    <path android:fillColor="#FFFF" android:pathData="M234,296c-28.16,-14.3 -59.24,-20 -82,-20 -44.58,0 -136,27.34 -136,82v42H166V383.93c0,-19 8,-38.05 22,-53.93C199.17,317.32 214.81,305.55 234,296Z"/>
+    <path android:fillColor="#FFFF" android:pathData="M340,288c-52.07,0 -156,32.16 -156,96v48H496V384C496,320.16 392.07,288 340,288Z"/>
+    <path android:fillColor="#FFFF" android:pathData="M340,168m-88,0a88,88 0,1 1,176 0a88,88 0,1 1,-176 0"/>
 </vector>
