--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -154,12 +154,12 @@
         app:cardBackgroundColor="@color/accent_color"
         app:cardCornerRadius="27dp"
         app:cardElevation="2dp"
-        app:layout_constraintBottom_toTopOf="@+id/moreOptions"
+        app:layout_constraintBottom_toTopOf="@+id/showMoreOptions"
         app:layout_constraintEnd_toEndOf="parent"
         android:focusable="true">
 
         <ImageView
-            android:id="@+id/chatIcon"
+            android:id="@+id/addChatIcon"
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_gravity="center"
@@ -172,7 +172,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/moreOptions"
+        android:id="@+id/showMoreOptions"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginEnd="16dp"
@@ -189,9 +189,8 @@
         <ImageView
             android:id="@+id/moreOptionsIcon"
             android:layout_width="33dp"
-            android:layout_height="37dp"
+            android:layout_height="33dp"
             android:layout_gravity="center"
-            android:layout_marginTop="1dp"
             android:contentDescription="@string/plus_icon"
             app:srcCompat="@drawable/ic_plus"
             tools:ignore="ImageContrastCheck" />
