Add chat activity changed to add friend activity

--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:scrollbarStyle="insideOverlay"
-    tools:context=".activity.landing.AddChatActivity">
+    tools:context=".activity.landing.AddFriendActivity">
 
     <TextView
         android:id="@+id/addChatInstructions"
