Replaced finish() with Util.startActivity
- Now you can enter Landing automatically checking your Preferences

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -18,13 +18,13 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/btnReturnF"
+                android:id="@+id/btnReturn"
                 android:layout_width="57dp"
                 android:layout_height="48dp"
                 android:layout_marginTop="16dp"
                 android:backgroundTint="@color/background"
                 android:contentDescription="@string/register_btn"
-                android:onClick="changeToLastActivity"
+                android:onClick="changeToLoginActivity"
                 app:icon="@mipmap/ic_return_foreground"
                 app:iconSize="30dp"
                 app:iconTint="@color/accent_color"
