--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -44,7 +44,7 @@
           android:layout_marginEnd="40dp"
           android:fontFamily="@font/asap"
           android:minHeight="48dp"
-          android:onClick="changeToLastActivity"
+          android:onClick="changeToLoginActivity"
           android:text="@string/login"
           android:textColor="@color/white"
           android:textSize="16sp"
@@ -186,7 +186,7 @@
           android:layout_marginTop="16dp"
           android:backgroundTint="@color/background"
           android:contentDescription="@string/register_btn"
-          android:onClick="changeToLastActivity"
+          android:onClick="changeToLoginActivity"
           app:icon="@mipmap/ic_return_foreground"
           app:iconSize="30dp"
           app:iconTint="@color/accent_color"
