--- a/app/src/main/res/layout/activity_verify_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_verify_forgotten_password.xml
@@ -98,7 +98,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/background"
         android:contentDescription="@string/register_btn"
-        android:onClick="changeToLoginActivity"
+        android:onClick="changeToLastActivity"
         app:icon="@mipmap/ic_return_foreground"
         app:iconSize="30dp"
         app:iconTint="@color/accent_color"
