--- a/app/src/main/res/layout/activity_set_username.xml
+++ b/app/src/main/res/layout/activity_set_username.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".activity.SetUsernameActivity">
+    tools:context=".activity.welcome.SetUsernameActivity">
 
     <Button
         android:id="@+id/btnSubmit"
