--- a/app/src/main/res/layout/select_profile_picture.xml
+++ b/app/src/main/res/layout/select_profile_picture.xml
@@ -22,6 +22,7 @@
             android:backgroundTint="@color/contrast_background"
             android:contentDescription="@string/profile_pic_gallery"
             android:gravity="center"
+            android:onClick="openGallery"
             app:cornerRadius="100dp"
             app:icon="@drawable/ic_gallery"
             app:iconGravity="textStart"
@@ -79,6 +80,7 @@
             android:layout_marginEnd="21dp"
             android:backgroundTint="@color/background"
             android:contentDescription="@string/profile_pic_trash"
+            android:onClick="removeProfilePicture"
             app:icon="@drawable/ic_trash_can"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
@@ -96,6 +98,7 @@
             android:backgroundTint="@color/background"
             android:contentDescription="@string/profile_pic_camera"
             android:gravity="center"
+            android:onClick="openCamera"
             app:cornerRadius="100dp"
             app:icon="@drawable/ic_camera"
             app:iconGravity="textStart"
