--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -87,11 +87,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:contentDescription="TODO"
+        android:src="@drawable/ic_profile_pic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtInstruction"
-        app:srcCompat="@drawable/ic_profile_pic" />
+        app:layout_constraintTop_toBottomOf="@+id/txtInstruction" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/crdVCamera"
