--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -134,9 +134,11 @@
         android:id="@+id/clickableContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#3E000000"
         android:clickable="false"
         android:elevation="10dp"
         android:onClick="updatePictureOptions"
+        android:orientation="horizontal"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@id/layoutPictureOptions"
