--- a/app/src/main/res/layout/activity_set_username.xml
+++ b/app/src/main/res/layout/activity_set_username.xml
@@ -111,6 +111,7 @@
         android:fontFamily="@font/asap"
         android:hint="@string/username_tag_hint"
         android:inputType="textPersonName"
+        android:maxLength="4"
         android:textColor="@color/white"
         android:textColorHint="@color/hints"
         android:textSize="20sp"
