--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -33,6 +33,7 @@
         android:gravity="center_horizontal"
         android:hint="@string/profile_info_name_hint"
         android:inputType="textPersonName"
+        android:maxLength="32"
         android:minHeight="48dp"
         android:textColor="@color/white"
         android:textColorHint="@color/hints"
