--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -126,7 +126,7 @@
         app:cardCornerRadius="27dp"
         app:cardElevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/addChat"
+        app:layout_constraintBottom_toTopOf="@id/addFriend"
         app:layout_constraintEnd_toEndOf="parent"
         android:focusable="true">
 
@@ -144,7 +144,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/addChat"
+        android:id="@+id/addFriend"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginEnd="16dp"
