--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -159,7 +159,7 @@
         android:focusable="true">
 
         <ImageView
-            android:id="@+id/addChatIcon"
+            android:id="@+id/userIcon"
             android:layout_width="33dp"
             android:layout_height="33dp"
             android:layout_gravity="center"
