--- a/app/src/main/res/layout/activity_set_username.xml
+++ b/app/src/main/res/layout/activity_set_username.xml
@@ -93,6 +93,7 @@
         android:fontFamily="@font/asap"
         android:hint="@string/username_hint"
         android:inputType="textPersonName"
+        android:maxLength="32"
         android:textColor="@color/white"
         android:textColorHint="@color/hints"
         android:textSize="20sp"
